--- a/src/assets/stylesheets/scss/components/_collapse.scss
+++ b/src/assets/stylesheets/scss/components/_collapse.scss
@@ -1,11 +1,11 @@
 .collapse {
-  border-radius: 5px;
   overflow: hidden;
 
   h2 {
     position: relative;
     font-weight: bold;
     padding: 10px 20px;
+    border-radius: 5px;
     color: #ffffff;
     background-color: #ff6060;
     cursor: pointer;
@@ -20,7 +20,7 @@
 
   .collapsible {
     background-color: #f6f6f6;
-
+    border-radius: 0 0 5px 5px;
     overflow: hidden;
     display: grid;
     opacity: 0;
@@ -38,6 +38,10 @@
 }
 
 .collapse.open {
+  h2 {
+    border-radius: 5px 5px 0 0;
+  }
+
   h2::after {
     rotate: -180deg;
   }
